fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ font-family: 'Vollkorn', serif;*/
   line-height: .9em;
   font-size: 300%;
   margin-bottom: 0.3em;
+  margin-top: 1em;
 
 }
 
